package pattern;

public interface MetricObserver {
    void update(int activeUsers);
}
