@startuml
title Observer - Ejemplo 3 - solucion para tablero en tiempo real
skinparam classAttributeIconSize 0
hide empty fields
class "main.Main" as main_Main {
  +main(String[] args): void
}
class "pattern.ChartWidget" as pattern_ChartWidget {
  +update(int activeUsers): void
}
class "pattern.CounterWidget" as pattern_CounterWidget {
  +update(int activeUsers): void
}
interface "pattern.MetricObserver" as pattern_MetricObserver {
}
class "pattern.RealtimeDashboard" as pattern_RealtimeDashboard {
  +attach(MetricObserver observer): void
  +setActiveUsers(int activeUsers): void
}
pattern_MetricObserver <|.. pattern_ChartWidget
pattern_MetricObserver <|.. pattern_CounterWidget
main_Main ..> pattern_ChartWidget : instancia
main_Main ..> pattern_CounterWidget : instancia
main_Main ..> pattern_RealtimeDashboard : instancia
pattern_ChartWidget --> pattern_MetricObserver : usa
pattern_CounterWidget --> pattern_MetricObserver : usa
pattern_RealtimeDashboard --> pattern_MetricObserver : usa
@enduml
